<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:orientation="vertical"
              tools:context="com.startup.colleague.app.ActiveEmailActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register_title"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="@dimen/font_title_size"/>

    <LinearLayout
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/account_id"
            android:textColor="@color/white"
            android:textSize="@dimen/font_normal_size"
            />

        <EditText
            android:id="@+id/username"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:singleLine="true"
            android:inputType="textVisiblePassword"
            android:imeOptions="actionNext"
            android:hint="@string/account_id_hint"
            android:background="@null"
            />
    </LinearLayout>
	<View
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="30dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/account_psw"
            android:textColor="@color/white"
            android:textSize="@dimen/font_normal_size"
            />

        <EditText
            android:id="@+id/password"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:hint="@string/passwd_hint"
            android:background="@null"
            />
    </LinearLayout>
	<View
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="30dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/account_cfm_psw"
            android:textColor="@color/white"
            android:textSize="@dimen/font_normal_size"
            />

        <EditText
            android:id="@+id/password2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:singleLine="true"
            android:hint="@string/passwd_cfm_hint"
            android:background="@null"
            />
    </LinearLayout>
	<View
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="30dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/account_cfm_register"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/button_selectorb"
        />

</LinearLayout>
