<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context="com.startup.colleague.app.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
        android:text="@string/title"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="50sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/desc"
        android:textSize="@dimen/font_desc_size"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/account_id"
            android:textColor="@color/white"
            android:textSize="@dimen/font_normal_size"
            />

        <EditText
            android:id="@+id/username"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/account_id_hint"
            android:textColor="@color/white"
            android:imeOptions="actionNext"
            android:inputType="textVisiblePassword"
            android:background="@null"
            />
    </LinearLayout>
	<View
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/account_psw"
            android:textColor="@color/white"
            android:textSize="@dimen/font_normal_size"
            />

        <EditText
            android:id="@+id/password"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:singleLine="true"
            android:background="@null"
            />
    </LinearLayout>
	<View
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="1dp"
        android:background="@color/light_gray"
        />
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/account_cfm_login"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/button_selectorb"
        />

</LinearLayout>
